--- a/index.html
+++ b/index.html
@@ -27,12 +27,49 @@
                 <h2>Our work</h2>
             </div>
 
-            <img src="./img/myriam-grrdz-CmmWGcdj38U-unsplash.jpg" alt="">
+            <img src="./img/img1.webp" alt="">
             <div class="caption">
                 <h3>Photo One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, adipisci.</p>
             </div>
+
+            <img src="./img/img2.webp" alt="">
+            <div class="caption">
+                <h3>Photo Two</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, adipisci.</p>
+            </div>
+
+            <img src="./img/img3.webp" alt="">
+            <div class="caption">
+                <h3>Photo Three</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, adipisci.</p>
+            </div>
+
+            <img src="./img/img4.webp" alt="">
+            <div class="caption">
+                <h3>Photo Four</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, adipisci.</p>
+            </div>
+            
+            <img src="./img/img5.webp" alt="">
+            <div class="caption">
+                <h3>Photo Five</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, adipisci.</p>
+            </div>
+
         </div>
     </main>
+
+    <footer>
+        <h3>Get in Touch</h3>
+        <p>Email or Call us</p>
+        <p>Email:<strong>amilandev78atgmaildotcom</strong></p>
+        <p>Phone:<strong>06345678910</strong></p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
