@media 900px css done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="landing-text">
                 <div id="landing-text-inner">
                     <h1>Acme Photo</h1>
-                    <h2>Beautiful Natural Photos</h2>
+                    <h2>Beautiful Natural Images</h2>
                     <a href="#images" class="btn" id="view-work">View work</a>
                 </div>
             </div>
